ferritin/src/snapshots/ferritin__tests__get_crate_root_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate\"), OutputMode::TestMode)"
---
  Item: test_crate
Kind: Module
Visibility: Public
Defined at: <type-name>test_crate</type-name>
In crate: test-crate (0.1.0)

<truncated level="full">A minimal test crate for rustdoc JSON testing

</truncated>

<section><section-title>Modules</section-title><list>
  <item><label><type-name>link_resolution_tests</type-name></label>
<truncated level="single-line">Module for testing intra-doc link resolution

</truncated>
</item>
  <item><label><type-name>reexport_mod</type-name></label></item>
  <item><label><type-name>submodule</type-name></label>
<truncated level="single-line">A module with items

</truncated>
</item>
</list>
</section><section><section-title>Structs</section-title><list>
  <item><label><type-name>GenericStruct</type-name></label>
<truncated level="single-line">A generic struct for testing multi-paragraph documentation.

This struct <elided chars="409"/></truncated>
</item>
  <item><label><type-name>SubStruct</type-name></label>
<truncated level="single-line">A struct in a submodule

</truncated>
</item>
  <item><label><type-name>TestStruct</type-name></label>
<truncated level="single-line">A simple struct for testing basic functionality.

This struct demonstrates <elided chars="220"/></truncated>
</item>
  <item><label><type-name>TupleStruct</type-name></label>
<truncated level="single-line">A tuple struct for testing

</truncated>
</item>
  <item><label><type-name>UnitStruct</type-name></label>
<truncated level="single-line">A unit struct for testing

</truncated>
</item>
  <item><label><type-name>Vec</type-name></label>
<truncated level="single-line">A contiguous growable array type, written as <inline-code>Vec<T></inline-code>, short for 'vector'.

 <elided chars="8635"/></truncated>
</item>
</list>
</section><section><section-title>Enums</section-title><list>
  <item><label><type-name>GenericEnum</type-name></label>
<truncated level="single-line">A generic enum for testing

See also <link href="https://docs.rs/test-crate/0.1.0/test-crate/submodule/enum.TestEnum.html"><inline-code>crate::TestEnum</inline-code></link>

</truncated>
</item>
  <item><label><type-name>TestEnum</type-name></label>
<truncated level="single-line">An enum for testing

This is like <link href="https://docs.rs/test-crate/0.1.0/test-crate/enum.GenericEnum.html"><inline-code>crate::GenericEnum</inline-code></link> but without the generic

</truncated>
</item>
</list>
</section><section><section-title>Traits</section-title><list>
  <item><label><type-name>ComplexTrait</type-name></label>
<truncated level="single-line">A more complex trait demonstrating various features

</truncated>
</item>
  <item><label><type-name>TestTrait</type-name></label>
<truncated level="single-line">A trait for testing extremely long documentation that exceeds line limits.

This <elided chars="1265"/></truncated>
</item>
</list>
</section><section><section-title>Functions</section-title><list>
  <item><label><type-name>async_function</type-name></label>
<truncated level="single-line">An async function

</truncated>
</item>
  <item><label><type-name>generic_function</type-name></label>
<truncated level="single-line">A generic function

</truncated>
</item>
  <item><label><type-name>sub_function</type-name></label>
<truncated level="single-line">A function in a submodule

</truncated>
</item>
  <item><label><type-name>test_function</type-name></label>
<truncated level="single-line">A public function

</truncated>
</item>
</list>
</section><section><section-title>Constants</section-title><list>
  <item><label><type-name>TEST_CONSTANT</type-name></label>
<truncated level="single-line">A const for testing

</truncated>
</item>
</list>
</section><section><section-title>Statics</section-title><list>
  <item><label><type-name>TEST_STATIC</type-name></label>
<truncated level="single-line">A static for testing

</truncated>
</item>
</list>
</section><section><section-title>Variants</section-title><list>
  <item><label><type-name>VariantA</type-name></label>
<truncated level="single-line">Variant A (see also <link href="https://docs.rs/test-crate/0.1.0/test-crate/enum.GenericEnum.html"><inline-code>crate::GenericEnum</inline-code></link>)

</truncated>
</item>
  <item><label><type-name>VariantB</type-name></label>
<truncated level="single-line">Variant B with data

</truncated>
</item>
  <item><label><type-name>VariantC</type-name></label>
<truncated level="single-line">Variant C with struct data (<inline-code>name</inline-code> and <inline-code>value</inline-code>)

</truncated>
</item>
</list>
</section>
