ferritin/src/snapshots/ferritin__tests__get_crate_root_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate\"), OutputMode :: Tty)"
---
Item: fixture_crate
Kind: Module
Visibility: Public
Defined at: [fixture_crate](https://docs.rs/fixture-crate/0.1.0/fixture-crate/index.html)
In crate: fixture-crate (0.1.0)

A minimal test crate for rustdoc JSON testing

Modules

  ◦ [link_resolution_tests](https://docs.rs/fixture-crate/0.1.0/fixture-crate/link_resolution_tests/index.html) 
    Module for testing intra-doc link resolution

  ◦ [markdown_test](https://docs.rs/fixture-crate/0.1.0/fixture-crate/markdown_test/index.html) 
    Markdown: Syntax [...]

  ◦ [namespace_collisions](https://docs.rs/fixture-crate/0.1.0/fixture-crate/namespace_collisions/index.html) 
    Module for testing namespace disambiguation with kind discriminators. [...]

  ◦ [reexport_mod](https://docs.rs/fixture-crate/0.1.0/fixture-crate/reexport_mod/index.html) 

  ◦ [submodule](https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/index.html) 
    A module with items

Structs

  ◦ [GenericStruct](https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.GenericStruct.html) 
    A generic struct for testing multi-paragraph documentation. [...]

  ◦ [ReachableViaPrivateModule](https://docs.rs/fixture-crate/0.1.0/fixture-crate/private_detail/struct.ReachableViaPrivateModule.html) 
    A struct accessible only via re-export from a private module.

  ◦ [SubStruct](https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/struct.SubStruct.html) 
    A struct in a submodule

  ◦ [TestStruct](https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html) 
    A simple struct for testing basic functionality. [...]

  ◦ [TupleStruct](https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TupleStruct.html) 
    A tuple struct for testing

  ◦ [UnitStruct](https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.UnitStruct.html) 
    A unit struct for testing

  ◦ [Vec](http://docs.rust-lang.org/nightly/alloc/vec/struct.Vec.html) 
    A contiguous growable array type, written as Vec<T>, short for 'vector'. [...]

Enums

  ◦ [GenericEnum](https://docs.rs/fixture-crate/0.1.0/fixture-crate/enum.GenericEnum.html) 
    A generic enum for testing [...]

  ◦ [TestEnum](https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/enum.TestEnum.html) 
    An enum for testing [...]

Traits

  ◦ [ComplexTrait](https://docs.rs/fixture-crate/0.1.0/fixture-crate/trait.ComplexTrait.html) 
    A more complex trait demonstrating various features

  ◦ [TestTrait](https://docs.rs/fixture-crate/0.1.0/fixture-crate/trait.TestTrait.html) 
    A trait for testing extremely long documentation that exceeds line limits. [...]

Functions

  ◦ [async_function](https://docs.rs/fixture-crate/0.1.0/fixture-crate/fn.async_function.html) 
    An async function

  ◦ [generic_function](https://docs.rs/fixture-crate/0.1.0/fixture-crate/fn.generic_function.html) 
    A generic function

  ◦ [sub_function](https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/fn.sub_function.html) 
    A function in a submodule

  ◦ [test_function](https://docs.rs/fixture-crate/0.1.0/fixture-crate/fn.test_function.html) 
    A public function

Constants

  ◦ [TEST_CONSTANT](https://docs.rs/fixture-crate/0.1.0/fixture-crate/constant.TEST_CONSTANT.html) 
    A const for testing

Statics

  ◦ [TEST_STATIC](https://docs.rs/fixture-crate/0.1.0/fixture-crate/static.TEST_STATIC.html) 
    A static for testing

Variants

  ◦ [VariantA](https://docs.rs/fixture-crate/0.1.0/fixture-crate/) 
    Variant A (see also [crate::GenericEnum](https://docs.rs/fixture-crate/0.1.0/fixture-crate/enum.GenericEnum.html))

  ◦ [VariantB](https://docs.rs/fixture-crate/0.1.0/fixture-crate/) 
    Variant B with data

  ◦ [VariantC](https://docs.rs/fixture-crate/0.1.0/fixture-crate/) 
    Variant C with struct data (name and value)
